# sound-scape

./: CMakeLists.txt  README.md
data/: convert-to-flac.rb  sample-00.flac  sample-01.flac  sample-02.flac  sample-03.flac  sample-04.flac  sample-05.flac  sample-06.flac  sample-07.flac  sample-08.flac  sample-09.flac  sample-10.flac  sample-11.flac  sample-12.flac  sample-13.flac
data2/: sample-00.flac  sample-01.flac  sample-02.flac  sample-04.flac  sample-05.flac  sample-06.flac  sample-07.flac  sample-08.flac  sample-09.flac  sample-10.flac
src/: config.cc  config.hh  main.cc  misc.cc  misc.hh  track.cc  track.hh
src/audio/: audio.hh  common.hh  exception.cc  exception.hh  sample.cc  sample.hh  service.cc  service.hh
